<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cameraIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_camera_alt_24"
            android:backgroundTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/cardCameraScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scan_card_link"
            android:textSize="16dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="10dp">

        <TextView
            android:id="@+id/tvExpDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/expDate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_ed_ccexpdate" />

                <Spinner
                    android:id="@+id/spMonthCC"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorEditText"
                    android:padding="10dp"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spYearCC"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorEditText"
                    android:padding="10dp"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/cardNumber" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_ed_ccnumber" />

                <EditText
                    android:id="@+id/edCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorEditText"
                    android:hint="(card number)"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvCardHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/cardHolderName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_ed_ccperson" />

                <EditText
                    android:id="@+id/edCardHolder"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorEditText"
                    android:hint="(card holder)"
                    android:padding="10dp"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCardType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/cartType" />

            <TextView
                android:id="@+id/tvCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/cvv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_ed_cctype" />

                <Spinner
                    android:id="@+id/spTypeCC"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorEditText"
                    android:padding="10dp"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/CVV"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorEditText"
                    android:hint="(cvv)"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCardAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/cardAmount" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_emount" />

                <EditText
                    android:id="@+id/edAmount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorEditText"
                    android:hint="(amount)"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCardHolderPassportNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/passportNumber" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_ed_ccperson" />

                <EditText
                    android:id="@+id/edPassportNo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorEditText"
                    android:hint="(passport number)"
                    android:inputType="textCapCharacters"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSubmitCard"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:background="@drawable/buttonbg"
            android:text="@string/flt_infp_btn_text"
            android:textColor="@color/colorButtonText" />
    </LinearLayout>


</LinearLayout>